--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ python:
   - "3.9"
 # command to install dependencies
 install:
-  - pip install --upgrade pip && pip install -r requirements.txt
+  - python -m pip install pip==21.3.1 && pip install -r requirements.txt
 script:
   - python test.py
