--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ python:
   - "3.9"
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip install -U importlib_metadata && pip install -r requirements.txt
 script:
   - python test.py
